# ReminderOnTheWall

./: .gitignore  .gitmodules  README.md  on-duty-noticer.sln  template_group-data.json  template_runtime-data.json
generate-wallpaper/: CMakeLists.txt
generate-wallpaper/include/: ConfigParser.h  generate-wallpaper.h.in
generate-wallpaper/source/: ConfigParser.cpp  WallpaperConfig.cpp  generate-wallpaper.cpp
on-duty-noticer/: InfoIO.cpp  InfoIO.h  generate.cpp  generate.h  on-duty-noticer.cpp  on-duty-noticer.vcxproj  on-duty-noticer.vcxproj.filters
scripts/: setup.vbs
src/: on-duty-noticer.sln
src/generate-wallpaper/: CMakeLists.txt  generate-wallpaper.sln
src/generate-wallpaper/generate-wallpaper/: generate-wallpaper.filters  generate-wallpaper.vcxproj  main.cpp
src/generate-wallpaper/generate-wallpaper/headers/: SimpleCSV.h  WallpaperConfig.h
src/generate-wallpaper/generate-wallpaper/src/: SimpleCSV.cpp  WallpaperConfig.cpp
src/generate-wallpaper/include/: generate-wallpaper.h
src/generate-wallpaper/source/: SimpleCSV.cpp  generate-wallpaper.cpp
src/on-duty-noticer_core/: on-duty-noticer.cpp
src/on-duty-noticer_static/: on-duty-noticer.cpp  on-duty-noticer.sln
src/static/: Reminder-On-The-Wall_static.sln  generate.h
src/static/Reminder-On-The-Wall_static/: Reminder-On-The-Wall_static.vcxproj  Reminder-On-The-Wall_static.vcxproj.filters  main.cpp
src/static/Reminder-On-The-Wall_static/headers/: SimpleCSV.h
src/static/Reminder-On-The-Wall_static/src/: SimpleCSV.cpp  WallpaperConfig.cpp
templates/: template_wallpaper-settings.cfg
